--- a/test/expected/index.css
+++ b/test/expected/index.css
@@ -1,3 +1,19 @@
+@custom-media --prefix-down (max-width: 575.98px);
+
+@custom-media --prefix-smUp (min-width: 576px);
+
+@custom-media --prefix-smDown (max-width: 767.98px);
+
+@custom-media --prefix-mdUp (min-width: 768px);
+
+@custom-media --prefix-mdDown (max-width: 991.98px);
+
+@custom-media --prefix-lgUp (min-width: 992px);
+
+@custom-media --prefix-lgDown (max-width: 1199.98px);
+
+@custom-media --prefix-xlUp (min-width: 1200px);
+
 .Grid {
   display: flex;
   flex-wrap: wrap;
@@ -71,7 +87,7 @@
   max-width: 100%;
 }
 
-@media (min-width: 576px) {
+@media (--prefix-smUp) {
   .GridItem--sm-1 {
     flex: 0 0 8.33333%;
     max-width: 8.33333%;
@@ -122,7 +138,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (--prefix-mdUp) {
   .GridItem--md-1 {
     flex: 0 0 8.33333%;
     max-width: 8.33333%;
@@ -173,7 +189,7 @@
   }
 }
 
-@media (min-width: 992px) {
+@media (--prefix-lgUp) {
   .GridItem--lg-1 {
     flex: 0 0 8.33333%;
     max-width: 8.33333%;
@@ -224,7 +240,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (--prefix-xlUp) {
   .GridItem--xl-1 {
     flex: 0 0 8.33333%;
     max-width: 8.33333%;
