--- a/sscreen.scss
+++ b/sscreen.scss
@@ -5,12 +5,13 @@ $--sscreen--breakpoints: () !global;
 
 $screen-prefix: '';
 $screen-style: camelCase;
+$screen-breakpoint-delimiter: '-';
 
-@mixin screen-set($breakpoints, $prefix: $screen-prefix, $style: $screen-style) {
+@mixin screen-set($breakpoints, $prefix: $screen-prefix, $style: $screen-style, $delimiter: $screen-breakpoint-delimiter) {
   $--sscreen--breakpoints: $breakpoints !global;
 
   @each $name, $value in $breakpoints {
-    $infix: sscreen--breakpoint-infix($name, $breakpoints, $delimiter: '-');
+    $infix: sscreen--breakpoint-infix($name, $breakpoints, $delimiter: $delimiter);
 
     // Up
     $min: sscreen--breakpoint-min($name, $breakpoints);
@@ -45,13 +46,13 @@ $screen-style: camelCase;
   @return $--sscreen--breakpoints;
 }
 
-@function screen-infix($name, $breakpoints: $--sscreen--breakpoints) {
-  @return sscreen--breakpoint-infix($name, $breakpoints, $delimiter: '-');
+@function screen-infix($name, $breakpoints: $--sscreen--breakpoints, $delimiter: $screen-breakpoint-delimiter) {
+  @return sscreen--breakpoint-infix($name, $breakpoints, $delimiter: $delimiter);
 }
 
-@mixin screen-up($name, $prefix: $screen-prefix, $style: $screen-style, $breakpoints: $--sscreen--breakpoints) {
+@mixin screen-up($name, $prefix: $screen-prefix, $style: $screen-style, $breakpoints: $--sscreen--breakpoints, $delimiter: $screen-breakpoint-delimiter) {
   $min: sscreen--breakpoint-min($name, $breakpoints);
-  $infix: sscreen--breakpoint-infix($name, $breakpoints, $delimiter: '-');
+  $infix: sscreen--breakpoint-infix($name, $breakpoints, $delimiter: $delimiter);
 
   @if $min {
     $min-name: #{$infix}up;
@@ -68,9 +69,9 @@ $screen-style: camelCase;
   }
 }
 
-@mixin screen-down($name, $prefix: $screen-prefix, $style: $screen-style, $breakpoints: $--sscreen--breakpoints) {
+@mixin screen-down($name, $prefix: $screen-prefix, $style: $screen-style, $breakpoints: $--sscreen--breakpoints, $delimiter: $screen-breakpoint-delimiter) {
   $max: sscreen--breakpoint-max($name, $breakpoints);
-  $infix: sscreen--breakpoint-infix($name, $breakpoints, $delimiter: '-');
+  $infix: sscreen--breakpoint-infix($name, $breakpoints, $delimiter: $delimiter);
 
   @if $max {
     $max-name: #{$infix}down;
